[package]
name = "rename-case"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dunce = "1.0.3"
normpath = "1.1"

[dependencies.windows]
version = "0.44"
features = [
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell",
]
