[package]
name = "tokio-broadcast-bench"
version = "0.1.0"
authors = ["Yukun Guo <gyk.net@gmail.com>"]

[[bin]]
name = "tokio-broadcast-bench"

[dependencies]
log = "0.3"
futures = "0.1"
tokio-core = "0.1"
tokio-io = "0.1.2"
tokio-pool = "0.1"
tokio-timer = "0.1"
bytes = "0.4"
byteorder = "1.0"
lazy_static = "0.2"
