[package]
name = "tokio-broadcast-bench"
version = "0.2.0"
authors = ["Yukun Guo <gyk.net@gmail.com>"]

[[bin]]
name = "tokio-broadcast-bench"

[dependencies]
log = "0.3"
futures = "0.1"
tokio = "0.1.13"
tokio-codec = "0.1"
tokio-io = "0.1"
tokio-timer = "0.2"
bytes = "0.4"
byteorder = "1.0"
lazy_static = "1.0"
