[package]
name = "tokio-cleanup-queue-3"
version = "0.1.0"
authors = ["Yukun Guo <gyk.net@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1"
futures = "0.1"
lazy_static = "1"
log = "0.4"
pretty_env_logger = "0.3"
tokio = "0.1"
tokio-timer = "0.2"

[dev-dependencies]
pretty_env_logger = "0.3"
