[package]
name = "tokio-pool-upgrade"
version = "0.1.0"
authors = ["Connor Hilarides <connorcpu@live.com>", "Me"]
readme = "README.md"
keywords = ["tokio", "pool", "multithread", "concurrent", "futures"]
license = "MIT"

description = """
TokioPool is a library designed to help you multithread your
tokio applications by providing a pool of threads which you
can distribute your load across.
"""

[dependencies]
futures = "0.1"
tokio = "0.1"
