[package]
name = "tokio-broadcast-bench"
version = "0.3.0"
authors = ["Yukun Guo <gyk.net@gmail.com>"]
edition = "2018"

[[bin]]
name = "tokio-broadcast-bench"

[dependencies]
futures = "0.3"
log = "0.4"

# "rt-threaded" is needed because the `subscriber.rs` example depends on it.
# See https://github.com/rust-lang/cargo/issues/7916.
tokio = { version = "0.2", features = ["io-util", "macros", "rt-threaded", "sync", "tcp", "time"] }

tokio-util = { version = "0.3", features = ["codec"] }
bytes = "0.5"
byteorder = "1.3"

[dev-dependencies]
lazy_static = "1.4"
